--- a/src/pages/homepage/Homepage.css
+++ b/src/pages/homepage/Homepage.css
@@ -93,13 +93,13 @@
   margin-bottom: 1rem;
 }
 
-.sign_input_wrapp>label {
+.sign_input_wrapp > label {
   font-size: 14px;
   color: var(--color-black);
   font-weight: 300;
 }
 
-.sign_input_wrapp>input {
+.sign_input_wrapp > input {
   width: 100%;
   padding: 0.5rem 1rem;
   background: #dad9d8;
@@ -131,7 +131,7 @@
   flex-direction: column;
 
   /* padding: 2rem; */
-  padding: 2rem 4rem 1rem 4rem;
+  padding: 2rem 3rem 2rem 3rem;
   /* gap: 1rem; */
 
   color: var(--color-black);
@@ -161,7 +161,7 @@
   margin-top: 10px;
 }
 
-.signup_terms_wrapp>p {
+.signup_terms_wrapp > p {
   font-size: 13px;
 }
 
@@ -178,10 +178,10 @@
   align-items: center;
   justify-content: flex-start;
   flex-direction: column;
-  padding: 2rem;
+  padding: 3rem;
   color: var(--color-black);
-  padding-left: 74px;
-  width: 460px;
+  /* padding-left: 74px; */
+  /* width: 460px; */
   height: 580px;
   background: var(--color-bg);
   position: relative;
@@ -196,7 +196,7 @@
 }
 
 .tab_btn_main {
-  height: 32px;
+  height: 40px;
   display: flex;
   justify-content: center;
   padding-left: 10px;
@@ -210,6 +210,7 @@
   border-top-left-radius: 6px;
   border-top-right-radius: 6px;
   font-size: 13px;
+  width: 100%;
 }
 
 /* modal 4 media query */
@@ -318,6 +319,12 @@
   .model_sizing {
     width: 400px;
   }
+
+  .tab_btn_main {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    height: 70px;
+  }
 }
 
 @media screen and (max-width: 530px) {
@@ -335,9 +342,12 @@
   }
 
   .tab_btn_main {
+    /* height: 45px; */
+  }
 
-    height: 45px;
-}
+  .tab_btn_styling {
+    font-size: 11px;
+  }
 }
 
 @media screen and (max-width: 420px) {
