--- a/src/components/retailernavigationbar/RetailerNavigationBar.css
+++ b/src/components/retailernavigationbar/RetailerNavigationBar.css
@@ -15,6 +15,6 @@
 
 @media screen and (max-width:1140px) {
     .cus-nav-black-con {
-        padding-left: 15px;
+        /* padding-left: 15px; */
     }
 }
